k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: sunil
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: <IMAGE_PLACEHOLDER>
        ports:
        - containerPort: 8080
