k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: sunil
spec:
  selector:
    app: springboot-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
